Consigna 3: login completado

--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
   <main class="pb-5">
     <div class="text-center p-4">
       <h2>Productos</h2>
-      <p class="lead">Verás aquí todos los productos del sitio.</p>
+      <p class="lead">Verás aquí todos los productos de la categoría Autos</p>
     </div>
     <div id="products-list-container">
     </div>
