--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
 </head>
 
 <body>
-  <main class="mt-5">
+  <main class="mt-5" style="text-align:center">
+    <h2>Inicio de sesión</h2>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+      <p>Email</p>
+      <input type="email" id="input-email"/>
+      <p style="color:red" id="email-error"></p>
+      <p>Contraseña</p>
+      <input type="password" id="input-password"/>
+      <p style="color:red" id="password-error"></p>
+      <br>
+      <input type="button" id="input-ingresar" value="Ingresar">
     </div>
   </main>
   <footer class="text-muted">
