--- a/products.html
+++ b/products.html
@@ -38,10 +38,10 @@
   </nav>
   <main class="pb-5">
     <div class="text-center p-4">
-      <h2>Productos</h2>
+      <h2>Productos</h2> <!-- Cambio de título y subtítulo. -->
       <p class="lead">Verás aquí todos los productos de la categoría Autos</p>
     </div>
-    <div id="products-list-container">
+    <div id="products-list-container"> <!-- Nuevo identificador para listado. -->
     </div>
   </main>
   <footer class="text-muted">
