--- a/portada.html
+++ b/portada.html
@@ -29,7 +29,7 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="usuario-ingresado"><!-- Identifiqué esta línea para mostrar el usuario del login -->
           </li>
         </ul>
       </div>
