--- a/products.html
+++ b/products.html
@@ -39,9 +39,48 @@
   <main class="pb-5">
     <div class="text-center p-4">
       <h2>Productos</h2> <!-- Cambio de título y subtítulo. -->
-      <p class="lead">Verás aquí todos los productos de la categoría Autos</p>
+      <p id="categoria-mostrada" class="lead">Verás aquí todos los productos de la categoría</p>
+      <!-- Agregué id para mostrar categoría -->
     </div>
-    <div id="products-list-container"> <!-- Nuevo identificador para listado. -->
+    <div class="container">
+      <div class="row"> <!-- Traído de categories.html 45-77 -->
+        <div class="col text-end">
+          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+            <input type="search" id="buscador" placeholder="Buscá un producto" class="m-1"><!-- Barra buscadora -->
+            <input type="radio" class="btn-check" name="options" id="sortAsc">
+            <label class="btn btn-light" for="sortAsc">Menor precio</label>
+            <input type="radio" class="btn-check" name="options" id="sortDesc">
+            <label class="btn btn-light" for="sortDesc">Mayor precio</label>
+            <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
+            <label class="btn btn-light" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i></label>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+          <div class="row container p-0 m-0">
+            <div class="col">
+              <p class="font-weight-normal text-end my-2">Precio</p> <!-- "Cant." por "Precio" -->
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="mín." id="rangeFilterPriceMin">
+              <!-- "Count" por "Price" -->
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="máx." id="rangeFilterPriceMax"> <!-- Repito -->
+            </div>
+            <div class="col-3 p-0">
+              <div class="btn-group" role="group">
+                <button class="btn btn-light btn-block" id="rangeFilterPrice">Filtrar</button> <!-- Repito -->
+                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="products-list-container">
+      <!-- Nuevo identificador para listado. -->
     </div>
   </main>
   <footer class="text-muted">
