--- a/product-info.html
+++ b/product-info.html
@@ -8,6 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
+  
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -37,10 +38,38 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+    <div class="container"> <!-- Lugar para mostrar lista -->
+      <h2 class="título-producto" id="product-name">Vuelva al listado de productos y seleccione uno.</h2> <!-- Le di margen con css con su id-->
+      <hr>
+      <p class="subtitulo-producto">Precio</p> <!-- Creé una clase para darle css a los subtítulos -->
+      <p id="product-cost"></p>
+      <p class="subtitulo-producto">Descripción</p>
+      <p id="product-desc"></p>
+      <p class="subtitulo-producto">Categoría</p>
+      <p id="product-cat"></p>
+      <p class="subtitulo-producto">Cantidad de vendidos</p>
+      <p id="product-soldCount"></p>
+      <p class="subtitulo-producto">Imágenes ilustrativas</p>
+      <div class="div-carrusel-imagenes" id="product-img">
+        <!-- Espacio para imágenes -->
       </div>
+      <h2 class="título-producto">Comentarios</h2>
+      <div id="comentarios">
+      </div>
+      <h2 class="título-producto">Comentar</h2>
+      <p>Tu opinión</p>
+      <textarea></textarea>
+      <p>Tu puntuación</p>
+      <input list="defaultNumbers" min="1" max="5">
+      <datalist id="defaultNumbers">
+        <option value="1"></option>
+        <option value="2"></option>
+        <option value="3"></option>
+        <option value="4"></option>
+        <option value="5"></option>
+      </datalist>
+      <br>
+      <button class="btn btn-primary mt-2">Enviar</button>
     </div>
   </main>
   <footer class="text-muted">
