--- a/product-info.html
+++ b/product-info.html
@@ -58,10 +58,10 @@
       </div>
       <h2 class="título-producto">Comentar</h2>
       <p>Tu opinión</p>
-      <textarea></textarea>
+      <textarea id="new-commentary-text"></textarea> <!-- Para ingresar el texto del comentario -->
       <p>Tu puntuación</p>
-      <input list="defaultNumbers" min="1" max="5">
-      <datalist id="defaultNumbers">
+      <input id="number-of-stars" list="stars-value-list" min="1" max="5">
+      <datalist id="stars-value-list">
         <option value="1"></option>
         <option value="2"></option>
         <option value="3"></option>
@@ -69,7 +69,7 @@
         <option value="5"></option>
       </datalist>
       <br>
-      <button class="btn btn-primary mt-2">Enviar</button>
+      <button class="btn btn-primary mt-2" id="send-new-commentary">Enviar</button>
     </div>
   </main>
   <footer class="text-muted">
