Pequeños ajustes visuales
Quité Prettier para verlo más cómodo, porque no me acostumbro a ese formato.

--- a/product-info.html
+++ b/product-info.html
@@ -56,11 +56,11 @@
       <h2 class="título-producto">Comentarios</h2>
       <div id="comentarios">
       </div>
-      <h2 class="título-producto">Comentar</h2>
+      <h2 class="título-producto">Comentar</h2> <!-- Nuevo comentario -->
       <p>Tu opinión</p>
-      <textarea id="new-commentary-text"></textarea> <!-- Para ingresar el texto del comentario -->
+      <textarea id="new-commentary-text"></textarea> <!-- Texto del comentario -->
       <p>Tu puntuación</p>
-      <input id="number-of-stars" list="stars-value-list" min="1" max="5">
+      <input id="number-of-stars" list="stars-value-list" min="1" max="5"> <!-- Puntuación -->
       <datalist id="stars-value-list">
         <option value="1"></option>
         <option value="2"></option>
@@ -69,7 +69,7 @@
         <option value="5"></option>
       </datalist>
       <br>
-      <button class="btn btn-primary mt-2" id="send-new-commentary">Enviar</button>
+      <button class="btn btn-primary mt-2" id="send-new-commentary">Enviar</button> <!-- Botón de envío -->
     </div>
   </main>
   <footer class="text-muted">
