--- a/cart.html
+++ b/cart.html
@@ -35,6 +35,7 @@
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
               <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
+              <li><hr class="dropdown-divider"></li>
               <li><a id="log-out" class="dropdown-item" href="index.html">Cerrar sesión</a></li>
             </ul>
           </li>
