--- a/cart.html
+++ b/cart.html
@@ -106,6 +106,7 @@
                 </div>
               </div>
             </div>
+            <button class="btn btn-primary" disabled>Confirmar</button>
           </form>
         </div>
 
