--- a/cart.html
+++ b/cart.html
@@ -71,7 +71,8 @@
             </div>
             <hr>
           </div>
-          <div class="row" id="listadoCarrito">
+          <div id="listadoCarrito">
+            <p class="text-center">¡Tu carrito no tiene artículos!</p>
             <!-- Listado de artículos -->
           </div>
         </div>
