--- a/product-info.html
+++ b/product-info.html
@@ -32,12 +32,15 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="usuario-ingresado" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="usuario-ingresado" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
               <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><a id="log-out" class="dropdown-item" href="index.html">Cerrar sesión</a></li>
             </ul>
           </li>
@@ -51,6 +54,10 @@
       <h2 class="título-producto" id="product-name">Vuelva al listado de productos y seleccione uno.</h2>
       <!-- Le di margen con css con su id-->
       <hr>
+      <div class="btn-cart">
+        <button id="boton-agregar" class="btn btn-primary">Agregar al carrito</button> <!-- Botón de agregar al carrito -->
+        <button id="boton-comprar" class="btn btn-info text-light">Comprar</button> <!-- Botón de agregar e ir al carrito -->
+      </div>
       <p class="subtitulo-producto">Precio</p> <!-- Creé una clase para darle css a los subtítulos -->
       <p id="product-cost"></p>
       <p class="subtitulo-producto">Descripción</p>
@@ -62,7 +69,8 @@
       <p class="subtitulo-producto">Imágenes ilustrativas</p>
       <!-- Comienzo carrusel -->
       <div id="carouselWithIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators" id="carousel-indicators"> <!-- Identifico indicadores para dinamizar -->
+        <div class="carousel-indicators" id="carousel-indicators">
+          <!-- Identifico indicadores para dinamizar -->
           <button type="button" data-bs-target="#carouselWithIndicators" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
         </div>
