--- a/cart.html
+++ b/cart.html
@@ -9,9 +9,14 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
 <body>
+  <div class="alert alert-success alert-dismissible show d-none alert-front" id="success-alert" role="alert">
+    Se ha confirmado su compra.
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -51,34 +56,37 @@
       <!-- Contenido página -->
       <div>
         <h2 class="text-center mt-5">Carrito de compras</h2>
-        <div>
-          <h3>Artículos a comprar</h3>
-          <div class="row">
-            <div class="col">
-              <!-- En blanco, con imágenes en fila debajo -->
+        <form id="form-compra" action="#" method="get" class="needs-validation" novalidate>
+          <!-- Aún no cambio el method a post porque no hay adonde enviarlo -->
+          <div>
+            <h3>Artículos a comprar</h3>
+            <div class="row">
+              <div class="col">
+                <!-- En blanco, con imágenes en fila debajo -->
+              </div>
+              <div class="col">
+                <p class="fw-bold">Nombre</p>
+              </div>
+              <div class="col">
+                <p class="fw-bold">Costo</p>
+              </div>
+              <div class="col">
+                <p class="fw-bold">Cantidad</p>
+              </div>
+              <div class="col">
+                <p class="fw-bold">Subtotal</p>
+              </div>
+              <div class="col">
+                <!-- En blanco, con papeleras en fila debajo -->
+              </div>
+              <hr>
             </div>
-            <div class="col">
-              <p class="fw-bold">Nombre</p>
+            <div id="listadoCarrito">
+              <!-- Listado de artículos -->
             </div>
-            <div class="col">
-              <p class="fw-bold">Costo</p>
-            </div>
-            <div class="col">
-              <p class="fw-bold">Cantidad</p>
-            </div>
-            <div class="col">
-              <p class="fw-bold">Subtotal</p>
-            </div>
-            <hr>
           </div>
-          <div id="listadoCarrito">
-            <p class="text-center">¡Tu carrito no tiene artículos!</p>
-            <!-- Listado de artículos -->
-          </div>
-        </div>
-        <div>
           <hr>
-          <form id="form-compra">
+          <div id="datos-de-compra" class="d-none">
             <div class="mt-4 mb-4">
               <h3>Tipo de envío</h3>
               <div id="tipo-de-envio">
@@ -88,6 +96,7 @@
                 <label for="envioExpress">Express de 5 a 8 días (7%)</label><br>
                 <input type="radio" name="tipo-de-envio" id="envioStandard" value="0.05" required>
                 <label for="envioStandard">Standard de 12 a 15 días (5%)</label>
+                <div class="invalid-feedback">Debe seleccionar un tipo de envío.</div>
               </div>
             </div>
             <hr>
@@ -97,67 +106,68 @@
                 <div class="col-6 mb-3">
                   <p>Calle</p>
                   <input type="text" class="cart-adress-input" required>
+                  <div class="invalid-feedback">Ingresa una calle</div>
                 </div>
                 <div class="col-6 mb-3">
                   <p>Número</p>
                   <input type="text" class="cart-adress-input" required>
+                  <div class="invalid-feedback">Ingresa un número</div>
                 </div>
                 <div class="col-6 mb-3">
                   <p>Esquina</p>
                   <input type="text" class="cart-adress-input" required>
+                  <div class="invalid-feedback">Ingresa una esquina</div>
                 </div>
               </div>
             </div>
-
-        </div>
-        <hr>
-        <div class="mt-4 mb-4">
-          <h3>Costos</h3>
-          <div>
-            <ul class="list-group">
-              <li class="list-group-item">
-                <div class="d-flex justify-content-between">
-                  <h4>Subtotal</h4>
-                  <h4 id="subtotalFinal">USD 0</h4>
-                </div>
-                <p>Costo unitario del producto por unidad</p>
-              </li>
-              <li class="list-group-item">
-                <div class="d-flex justify-content-between">
-                  <h4>Costo de envío</h4>
-                  <h4 id="costoEnvio">Falta elegir</h4>
-                </div>
-                <p>Según tipo de envío</p>
-              </li>
-              <li class="list-group-item">
-                <div class="d-flex justify-content-between">
-                  <h4>Total</h4>
-                  <h4 id="costoFinal">USD 0</h4>
-                </div>
-                <p>Costo unitario del producto por unidad</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <hr>
-        <div class="mt-4 mb-4">
-          <h3>Forma de pago</h3>
-          <div>
-            <h5 id="formaPago">No ha seleccionado.</h5>
-            <div class="col-sm-12">
-              <input type="checkbox" class="btn-check form-control" id="check-tipo-pago" required>
-              <!-- Check "oculto" para verificar los términos -->
-              <label for="check-tipo-pago"><button type="button" class="btn btn-link ps-0" data-bs-toggle="modal"
-                  data-bs-target="#modalPago" id="btn-tipo-pago">Seleccionar</button></label>
-              <div class="invalid-feedback">Debe seleccionar un tipo de pago.</div>
+            <hr>
+            <div class="mt-4 mb-4">
+              <h3>Costos</h3>
+              <div>
+                <ul class="list-group">
+                  <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                      <h4>Subtotal</h4>
+                      <h4 id="subtotalFinal">USD 0</h4>
+                    </div>
+                    <p>Costo unitario del producto por unidad</p>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                      <h4>Costo de envío</h4>
+                      <h4 id="costoEnvio">Elija tipo de envío</h4>
+                    </div>
+                    <p>Según tipo de envío</p>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                      <h4>Total</h4>
+                      <h4 id="costoFinal">USD 0</h4>
+                    </div>
+                    <p>Costo unitario del producto por unidad</p>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="mt-4 mb-4">
-          <div class="d-grid gap-2">
-            <button class="btn btn-primary" type="submit">Finalizar compra (INHABILITAR SIN TIPO DE ENVÍO)</button>
-          </div>
-        </div>
+            <hr>
+            <div class="mt-4 mb-4">
+              <h3>Forma de pago</h3>
+              <div>
+                <h5 id="formaPago">No ha seleccionado.</h5>
+                <div class="col-sm-12">
+                  <input type="checkbox" class="btn-check form-control" id="check-tipo-pago" required>
+                  <!-- Check "oculto" para verificar los términos -->
+                  <label for="check-tipo-pago"><button type="button" class="btn btn-link ps-0" data-bs-toggle="modal"
+                      data-bs-target="#modalPago" id="btn-tipo-pago">Seleccionar</button></label>
+                  <div class="invalid-feedback">Debe seleccionar y completar un tipo de pago.</div>
+                </div>
+              </div>
+            </div>
+            <div class="mt-4 mb-4">
+              <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="submit">Finalizar compra (INHABILITAR SIN TIPO DE ENVÍO)</button>
+              </div>
+            </div>
         </form>
       </div>
     </div>
@@ -182,40 +192,50 @@
   </div>
 
   <!-- Modal -->
+
   <div class="modal fade" id="modalPago" tabindex="-1" aria-labelledby="modalPagoLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="modalPagoLabel">Forma de pago</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <input type="radio" id="pagoTarj" name="forma-de-pago" value="credito" required>
-          <label for="pagoTarj">Tarjeta de crédito</label>
-          <hr>
-          <div>
-            <p>Número de tarjeta</p>
-            <input type="text" id="numTarj" class="input-tarj" required></input>
-            <p>Código de seg.</p>
-            <input type="text" id="codSeg" class="input-tarj" required></input>
-            <p>Vencimiento (MM/AA)</p>
-            <input type="text" id="vencTarj" class="input-tarj" required></input>
+        <form id="form-modal">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalPagoLabel">Forma de pago</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-
-          <input type="radio" id="pagoBanco" name="forma-de-pago" value="banco" required>
-          <label for="pagoBanco">Transferencia bancaria</label>
-          <hr>
-          <div>
-            <p>Número de cuenta</p>
-            <input type="text" id="numCuenta" class="input-banco" required></input>
+          <div class="modal-body">
+            <div>
+              <input type="radio" id="pagoTarj" name="forma-de-pago" value="credito" required>
+              <label for="pagoTarj">Tarjeta de crédito</label>
+              <hr>
+              <div>
+                <p>Número de tarjeta</p>
+                <input type="text" id="numTarj" class="input-tarj" required></input>
+                <div class="invalid-feedback">Ingresa un número de tarjeta</div>
+                <p>Código de seg.</p>
+                <input type="text" id="codSeg" class="input-tarj" required></input>
+                <div class="invalid-feedback">Ingresa el código de seguridad</div>
+                <p>Vencimiento (MM/AA)</p>
+                <input type="text" id="vencTarj" class="input-tarj" required></input>
+                <div class="invalid-feedback">Ingresa el vencimiento</div>
+              </div>
+            </div>
+            <div class="mt-4">
+              <input type="radio" id="pagoBanco" name="forma-de-pago" value="banco" required>
+              <label for="pagoBanco">Transferencia bancaria</label>
+              <hr>
+              <div>
+                <p>Número de cuenta</p>
+                <input type="text" id="numCuenta" class="input-banco" required></input>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
-        </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
+
 
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
